fix - spacing for homepage

--- a/src/components/Achieves/index.sass
+++ b/src/components/Achieves/index.sass
@@ -4,7 +4,7 @@
   margin-bottom: 50px
 
   &__main-content
-    padding-top: 50px
+    padding-top: 40px
     display: grid
     grid-template: repeat(2, auto) / repeat(2, auto)
     grid-row-gap: 20px
@@ -24,5 +24,5 @@
 
 @media only screen and (min-width: 1300px)
   .achieves
-    padding: 80px 100px
+    padding: 80px 100px 79px 100px
     margin-bottom: 0
