--- a/src/components/CompanyQualities/index.sass
+++ b/src/components/CompanyQualities/index.sass
@@ -37,7 +37,7 @@
 
 @media only screen and (min-width: 1300px)
   .qualities
-    padding: 140px 100px 120px 100px
+    padding: 144px 100px 85px 100px
 
     &__title
       padding-bottom: 40px !important
