--- a/src/components/Contact/index.sass
+++ b/src/components/Contact/index.sass
@@ -21,4 +21,4 @@
 
 @media only screen and (min-width: 1300px)
   .contact
-    padding: 100px 100px
+    padding: 150px 100px 140px 100px
