--- a/src/components/Explore/index.sass
+++ b/src/components/Explore/index.sass
@@ -40,8 +40,6 @@
 
 @media only screen and (min-width: 767px)
   .explore
-    margin-bottom: 50px
-
     > div
       padding-top: 50px
       padding-bottom: 50px
@@ -87,6 +85,8 @@
 
 @media only screen and (min-width: 1300px)
   .explore
+    padding-bottom: 120px
+
     > div
       margin: 0 100px
 
