--- a/src/components/Feedback/index.sass
+++ b/src/components/Feedback/index.sass
@@ -54,3 +54,6 @@
 
     &__title
       padding-bottom: 40px !important
+
+    &__client-wrapper
+      padding-bottom: 80px
