--- a/src/components/Footer/index.sass
+++ b/src/components/Footer/index.sass
@@ -31,7 +31,7 @@
     color: $yellow
 
   &__copyright
-    padding-top: 50px
+    padding-top: 25px
     p
       padding-bottom: 20px
 
@@ -75,7 +75,7 @@
       align-items: flex-start
       padding-top: 50px
       border-bottom: 1px solid $smokeWhite
-      padding-bottom: 50px
+      padding-bottom: 40px
       span
         padding-right: 50px
 
