--- a/src/components/Partners/index.sass
+++ b/src/components/Partners/index.sass
@@ -51,7 +51,7 @@
 @media only screen and (min-width: 1300px)
   .partners
     padding-top: 80px
-    padding-bottom: 125px
+    padding-bottom: 130px
 
     &__title
       padding-bottom: 65px !important
